<resources>
    <string name="app_name">Ackerschlagkartei</string>
    <string name="fragment_sign_in">Sign In</string>
    <string name="fragment_sign_up">Sign Up</string>
    <string name="fragment_reset_password">Reset Password</string>
    <string name="fragment_fields_map">Fields List</string>
    <string name="fragment_fields_list">Fields Map</string>
    <string name="fragment_field_add">Add Field</string>
    <string name="fragment_splash">Loading...</string>
    <string name="fragment_details">Details</string>
    <string name="fragment_cultivation">Cultivation</string>
    <string name="fragment_ground">Ground</string>
    <string name="fragment_actions">Actions</string>
    <string name="fragment_info">Info</string>
    <string name="fragment_documents">Documents</string>
    <string name="fragment_profile">Profile</string>
    <string name="et_email_hint">E-Mail</string>
    <string name="et_password_hint">Password</string>
    <string name="btn_sign_in_text">Sign in</string>
    <string name="btn_open_password_reset_text">Forgot Password?</string>
    <string name="lb_divider_text">OR</string>
    <string name="btn_open_sign_up_text">Sign up</string>
    <string name="error_empty_email">E-Mail can not be empty</string>
    <string name="error_empty_password">Password can not be empty</string>
    <string name="error_short_password">Password is too short</string>
    <string name="error_match_password">Passwords do not match</string>
    <string name="error_sign_in">Sign In failed</string>
    <string name="error_sign_up">Sign Up failed</string>
    <string name="error_reset">Reset failed</string>
    <string name="et_sign_up_password_confirm">Confirm</string>
    <string name="btn_sign_up_text">Create account</string>
    <string name="appbar_title">Fieldoverview</string>
    <string name="menu_change_view">Change view</string>
    <string name="menu_open_profile">Profile</string>
    <string name="menu_search">Search</string>
    <string name="menu_add_field">Add</string>
    <string name="et_forgot_password_hint">Forgot password</string>
    <string name="btn_return_to_sign_in">Return to Login</string>
    <string name="nav_cultivation">Cultivation</string>
    <string name="nav_ground">Ground</string>
    <string name="nav_actions">Actions</string>
    <string name="nav_info">Info</string>
    <string name="nav_documents">Documents</string>
    <string name="temp_language">en</string>
    <string name="add_field_title">Choose map points</string>
    <string name="add_field_description_hint">Description</string>
    <string name="add_field_confirm_toolbar_title">Create</string>
    <string name="add_field_reset_title">Reset</string>
    <string name="dd_previous_crop">Previous Crop</string>
    <string name="dd_primary_crop">Primary Crop</string>
    <string name="dd_secondary_crop">Secondary Crop</string>
    <string name="dd_next_crop">Next Crop</string>
    <string name="dd_zwf_group">ZWF-Group</string>
    <string name="action_category">Category</string>
    <string name="action">Action</string>
    <string name="add_action_button">Add Action</string>
    <string name="et_description">Description</string>
    <string name="et_area">Area</string>
    <string name="cb_water_protection_area">Water Protection Area</string>
    <string name="cb_red_area">Red Area</string>
    <string name="cb_phosphate_sensitive_area">Phosphate Sensitive Area</string>
    <string name="btn_delete_field">Delete field</string>
</resources>